--- a/src/main/res/layout/activity_video.xml
+++ b/src/main/res/layout/activity_video.xml
@@ -1,26 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     >
     <org.webrtc.SurfaceViewRenderer
         android:id="@+id/remoterSV"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:alpha="0.5"
-        tools:ignore="MissingConstraints">
-
-    </org.webrtc.SurfaceViewRenderer>
-
+       />
     <org.webrtc.SurfaceViewRenderer
         android:id="@+id/localSV"
-        android:layout_width="wrap_content"
-        android:layout_height="300dp"
-        android:layout_gravity="center"
-        android:alpha="0.5"
-        tools:ignore="MissingConstraints" />
-</LinearLayout>
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+        android:layout_gravity="top|left"
+       />
+</FrameLayout>
